committing my jekyll theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
 <footer class="footer">
     <div class="container">
         <span class="text-muted">
-            mattwright324 | {{ site.copyright }} |
-            <a target="_blank" href="{{ site.home }}" rel="noopener">home</a> |
-            <a target="_blank" href="{{ site.github }}" rel="noopener">github</a> |
-            <a target="_blank" href="{{ site.github_repo }}" rel="noopener">youtube-geofind</a>
+            CK360 | 2021 |
+            <a target="_blank" href="https://www.linkedin.com/in/conor-kelleher/" rel="noopener">Founder</a> |
+            <a target="_blank" href="https://www.youtube.com/channel/UCL5DoP90k7pkEIJ12lEDFDg" rel="noopener">YouTube</a> |
+            <a target="_blank" href="https://endcity.info/" rel="noopener">View Start Up</a>
         </span>
     </div>
 </footer>
